Wed Oct 13 22:53:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (check_uint): get rid of overflow on LLP64 platforms.

	* insns.def (opt_case_dispatch): use st_data_t.

Wed Oct 13 22:32:34 2010  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/util.rb (CGI::unescape): bugfix to unescape the multibyte
	  string. Thanks nobu and tDiary dev members. [Bug #3909]

Wed Oct 13 21:13:00 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (int_chr): raise error when the value is negative.

Wed Oct 13 19:24:08 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vm_destruct): This function type was wrong; correct to the prototype.

Wed Oct 13 14:58:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (rb_num_to_uint): fix 32bit logic.

Wed Oct 13 12:53:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (rb_num_to_uint): added to check the range of arguments.
	  Mainly for negative value with NUM2UINT on 32bit environment.

	* string.c (rb_str_concat): use rb_num_to_uint.

Wed Oct 13 12:10:02 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread_win32.c (w32_error): get English message first, instead
	  of system default. see [ruby-core:32765].
	  [experimental]

Wed Oct 13 11:04:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* debug.c (ruby_set_debug_option): define always for binary
	  compatibility with debug env enabled binary.

	* signal.c (ruby_enable_coredump): ditto.

Wed Oct 13 10:52:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (ruby_executable_node): missing prototype.

Wed Oct 13 05:23:04 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* missing/strchr.c: add strlen's prototype.

	* missing/strtrr.c: ditto.

Wed Oct 13 00:21:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (struct mktime_arg): constified.

	* ext/syck/rubyext.c (mktime_do, mktime_r, rb_syck_mktime): fix
	  function signatures.

Wed Oct 13 00:18:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
